[tool.poetry]
name = "dsmigrator"
version = "0.3.9"
description = "A cli tool to migrate Trend Micro Deep Security to the cloud."
authors = ["Alex Jackson <alex_jackson@trendmicro.com>", "Ethan Parent<ethan_parent@trendmicro.com>"]
readme = "README.md"
keywords = ["Trend", "Micro", "deepsecurity", "cloudone", "migrator", "trendmicro", "security", "cli"]
license = "GPLv3"
homepage = "https://github.com/ajaxbits/ds-migrator"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
urllib3 = "^1.26.4"
six = "^1.15.0"
certifi = "^2020.12.5"
python-dateutil = "^2.8.1"
deep-security-api = "^20.0.60"
click = "^7.1.2"
zeep = "^4.0.0"
requests = "^2.25.1"
rich = "^10.0.0"
PyYAML = "^5.4.1"
nested-lookup = "^0.2.22"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
black = "^20.8b1"
pdbpp = "^0.10.2"
nose2 = "^0.10.0"
rope = "^0.18.0"

[tool.poetry.scripts]
dsmg = 'dsmigrator.__main__:main'
dsmg-rules = 'dsmigrator.rules_migrator:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
