[tool.poetry]
name = "dsmigrator"
version = "1.0.0"
description = "A cli tool to migrate Trend Micro Deep Security to the cloud."
authors = ["Alex Jackson <alex_jackson@trendmicro.com>", "Ethan Parent<ethan_parent@trendmicro.com>"]
readme = "README.md"
keywords = ["Trend", "Micro", "deepsecurity", "cloudone", "migrator", "trendmicro", "security", "cli"]
license = "GPLv3"
homepage = "https://github.com/ajaxbits/ds-migrator"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
urllib3 = "^1.26.5"
python-dateutil = "^2.8.1"
click = "^7.1.2"
requests = "^2.25.1"
PyYAML = "^5.4.1"
rich = "^10.9.0"
deep-security-api = "^20.0.463"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
autoflake = "^1.4"

[tool.poetry.scripts]
dsmg = 'dsmigrator.__main__:main'
dsmg-rules = 'dsmigrator.rules_migrator:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
